# mstr-v2-substream

./: .gitignore  Cargo.toml  Taskfile.yaml  buf.work.yaml  build.rs  mstr-v2-dev-v0.1.0.spkg  mstr-v2-v0.1.0.spkg  mstr-v2-v0.1.1.spkg  mstr-v2-v0.1.2.spkg  substreams.template.yaml  substreams.yaml
abi/: MasterfileDrop.json  MasterfileDropFactory.json  Registry.json  SafeFactory.json  SafeL2.json
config/: dev.json
proto/v1/: common.proto  drop.proto  masterfile.proto  registry.proto  safe.proto
src/: lib.rs  safe.rs  safe_factory.rs
src/abi/: MasterfileDrop.rs  MasterfileDropFactory.rs  Registry.rs  SafeFactory.rs  SafeL2.rs  mod.rs
src/drop/: mod.rs
src/drop_factory/: mod.rs
src/pb/: masterfile.common.v1.rs  masterfile.drop.v1.rs  masterfile.events.v1.rs  masterfile.registry.v1.rs  masterfile.safe.v1.rs  mod.rs
src/registry/: mod.rs
src/safe/: mod.rs
src/utils/: mod.rs
