[package]
name = "mstr-v2"
version = "0.1.0"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
ethabi = "18"
hex-literal = "0.4"
num-bigint = "0.4"
prost = "0.11"
substreams = "0.5"
substreams-ethereum = "0.9"
tiny-keccak = "2"
serde_qs = "0.12"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21.5"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.9"
regex = "1.8"
thiserror = "1.0.38"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
